Fix new tests because silly me